もくもく会更新(バックエンド部分)
